pracaInz/force-app/main/default/objects/Delivery_Stop__c/Delivery_Stop__c.object-meta.xml
<CustomObject>
    <label>Delivery Stop</label>
    <nameField>
        <label>Delivery Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>