pracaInz/force-app/main/default/objects/Delivery_Stop__c/fields/Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Time__c</fullName>
    <formula>TEXT(Warehouse__r.Open_Time__c) + &apos; - &apos; + TEXT(Warehouse__r.Close_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Time</label>
    <type>Text</type>
</CustomField>