pracaInz/force-app/main/default/objects/Delivery_Stop__c/fields/Stop_Order__c.field-meta.xml
<CustomField>
    <fullName>Stop_Order__c</fullName>
    <label>Stop Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>