pracaInz/force-app/main/default/objects/Delivery_Stop__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Delivery Stops</relationshipLabel>
    <relationshipName>Delivery_Stops</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>